# appening

./: .gitignore  Makefile  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
{{cookiecutter.github_repo_name}}/: Makefile  pyproject.toml  {{cookiecutter.app_id}}.metainfo.xml  {{cookiecutter.app_id}}.yml  {{cookiecutter.project_slug}}.desktop
