[project]
name = 'appi'
dynamic = ['version']
description = ''
authors = [
    { name = 'Omar', email = 'omar@atumm.org' },
]
dependencies = []
requires-python = '>=3.9,<3.10'
license = { text = 'BSD-3-Clause' }

[project.optional-dependencies]
dev = [
    'cookiecutter',
    'click',
]

[project.urls]
Documentation = 'https://github.com/atumm-ra/appi#readme'
Issues = 'https://github.com/atumm-ra/appi/issues'
Source = 'https://github.com/atumm-ra/appi'

[build-system]
requires = ['pdm-pep517']
build-backend = 'pdm.pep517.api'

